--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <main class="wrapper">
     <h1>FAQs</h1>
-    <details>
+    <details open>
       <summary>What is Frontend Mentor, and how will it help me?</summary>
       <p>
         Frontend Mentor offers realistic coding challenges to help developers improve their
